# cs180-23-the-a-team

./: .gitignore  .gitmodules  CMakeLists.txt  LinkedList.cpp  LinkedList.h  README.md  accounts.json  data.json  encrypt.cpp  encrypt.h  file.json  graph.gnu  graphTest.cpp  main.cpp  main2.cpp  main3.cpp  output.json  parser.h  personal.txt  random_ITv4aK2F78.txt  sample.csv  unittest.cpp
Database/Collection_1/: file1.json
Inputs/: test1.csv
src/: LinkedList.cpp  LinkedList.h  authentication.cpp  authentication.h  collection.cpp  collection.h  csv.cpp  csv.h  csvtojson.cpp  csvtojson.h  data.json  emptyjson.cpp  encrypt.cpp  encrypt.h  gui.cpp  gui.h  json.cpp  json.h  parser.cpp  parser.h
